@@ -1,3 +1,6 @@
+[B]2.2.3[/B]
+Add Keyboard Autocompletion module
+
 [B]2.2.2[/B]
 Fix special episodes for banner view
 Add DialogPVRInfo
